--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "15.4.4",
     "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "shiki": "^3.9.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
