--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rehype-pretty-code": "^0.14.1",
+    "remark-gfm": "^4.0.1",
     "shiki": "^3.9.0"
   },
   "devDependencies": {
